# mycelium

./: .dockerignore  .env  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE  LICENSE.rtf  Makefile  README.md  buildenv.sh  compose.yml  config_example.toml  flake.nix  keys.txt  osx_compile_start.sh
.cargo/: config.toml
.forgejo/workflows/: build.yaml  ci.yaml
.github/: dependabot.yml
.github/workflows/: ci.yaml  docker.yml  release.yaml
docs/: api.yaml  crates.md  data_packet.md  message.md  openrpc.json  packet.md  private_network.md  proxy.md  topic_configuration.md  vsock.md
installers/windows/wix/: mycelium.en-us.wxl  mycelium.wxs
mobile/: Cargo.toml  README.md
mobile/src/: lib.rs
mobile/tests/: test_peers.rs
mycelium/: Cargo.toml  build.rs  cbindgen.toml
mycelium-android/: Cargo.toml  build.rs
mycelium-android/aidl/android/os/: IServiceManager.aidl
mycelium-android/aidl/tech/threefold/mycelium/: PacketStats.aidl  QueriedSubnet.aidl
mycelium-android/src/: main.rs  node.rs  service.rs  service_manager.rs
mycelium-api/: Cargo.toml  mycelium-api-example.py  mycelium-api-openrpc-README.md  mycelium-api-unix-socket-client.py  mycelium-api-unix-socket-example.py  unix-socket-README.md
mycelium-api/src/: lib.rs  message.rs  mycelium-api-openrpc.json  rpc.rs  unix_socket.rs
mycelium-api/src/rpc/: admin.rs  message.rs  models.rs  network.rs  peer.rs  route.rs  spec.rs  traits.rs  unix.rs
mycelium-api/src/rpc/network/: errors.rs  linux_impl.rs  managed.rs  models.rs  stub.rs
mycelium-cdn-meta/: Cargo.toml
mycelium-cdn-meta/src/: lib.rs
mycelium-cli/: Cargo.toml
mycelium-cli/src/: inspect.rs  lib.rs  peer.rs  proxy.rs  routes.rs  rpc_client.rs  stats.rs
mycelium-metrics/: Cargo.toml
mycelium-metrics/src/: lib.rs  noop.rs  prometheus.rs
mycelium-tun/: Cargo.toml
mycelium-tun/src/: checksum.rs  lib.rs  linux.rs  offload.rs
mycelium-ui/: Cargo.toml  Dioxus.toml  README.md
mycelium-ui/assets/: styles.css
mycelium-ui/src/: api.rs  main.rs
mycelium-ui/src/components/: home.rs  layout.rs  mod.rs  peers.rs  routes.rs
mycelium/aidl/tech/threefold/mycelium/: IMyceliumService.aidl  NodeInfo.aidl  PacketStatEntry.aidl  PeerInfo.aidl  Route.aidl  StartConfig.aidl
mycelium/include/: mycelium.h
mycelium/src/: babel.rs  cdn.rs  connection.rs  crypto.rs  data.rs  dns.rs  endpoint.rs  interval.rs  lib.rs  message.rs  metric.rs  metrics.rs  node_handle.rs  packet.rs  packet_queue.rs  peer.rs  peer_manager.rs  proxy.rs  router.rs  router_id.rs  routing_table.rs  routing_table_2.rs  rr_cache.rs  seqno_cache.rs  sequence_number.rs  source_table.rs  subnet.rs  task.rs  tun.rs
mycelium/src/aidl/: conversions.rs  mod.rs  service.rs  service_manager.rs
mycelium/src/api/: message.rs
mycelium/src/babel/: hello.rs  ihu.rs  route_request.rs  seqno_request.rs  update.rs
mycelium/src/connection/: sctp.rs  tls.rs  tracked.rs  vsock.rs
mycelium/src/ffi/: conversions.rs  error.rs  exports.rs  mod.rs  types.rs
mycelium/src/message/: chunk.rs  done.rs  init.rs  topic.rs
mycelium/src/packet/: control.rs  data.rs
mycelium/src/routing_table/: iter.rs  iter_mut.rs  no_route.rs  queried_subnet.rs  route_entry.rs  route_key.rs  route_list.rs  subnet_entry.rs
mycelium/src/tun/: android.rs  darwin.rs  ios.rs  linux.rs  windows.rs
myceliumd/: Cargo.toml  README.md  build.rs  config_example.toml
myceliumd-common/: Cargo.toml
myceliumd-common/src/: defaults.rs  lib.rs
myceliumd-private/: Cargo.toml  README.md
myceliumd-private/src/: api.rs  cli.rs  main.rs
myceliumd-private/src/cli/: message.rs
myceliumd/src/: api.rs  cli.rs  main.rs  metrics.rs
myceliumd/src/api/: message.rs
myceliumd/src/cli/: message.rs  peer.rs  routes.rs
prometheus-metrics/: Cargo.toml
scripts/: README.md  bigmush.fish  bigmush.sh  build_lib.sh  setup_network.sh
src/: api.rs  babel.rs  cli.rs  codec.rs  connection.rs  crypto.rs  data.rs  endpoint.rs  filters.rs  interval.rs  ip_pubkey.rs  lib.rs  main.rs  message.rs  metric.rs  node_setup.rs  packet.rs  packet_control.rs  peer.rs  peer_manager.rs  router.rs  router_id.rs  routing.rs  routing_table.rs  sequence_number.rs  source_table.rs  subnet.rs  timer.rs  timers.rs  tun.rs  x25519.rs
src/babel/: hello.rs  ihu.rs  route_request.rs  seqno_request.rs  tlv.rs  update.rs
src/cli/: message.rs
src/message/: chunk.rs  done.rs  init.rs
src/packet/: control.rs  data.rs
src/tun/: darwin.rs  linux.rs  windows.rs
systemd/: mycelium.service
