[package]
name = "mycelium"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3.27"
toml = "0.7.8"
serde = { version = "1.0.192", features = ["derive"] }
rand = "0.8.5"
bytes = "1.4.0"
x25519-dalek = { version = "2.0.0", features = ["getrandom", "static_secrets"] }
serde_json = "1.0.105"
blake2 = "0.10.6"
digest = "0.10.7"
aes-gcm = "0.10.3"
log = "0.4.19"
pretty_env_logger = "0.5.0"
faster-hex = "0.8.0"
tokio-stream = { version = "0.1.14", features = ["sync"] }
left-right = "0.11.5"
ipnet = "2.8.0"
ip_network_table-deps-treebitmap = "0.5.0"
blake3 = "1.5.0"
axum = { version = "0.6.20", default-features = false, features = [
  "http1",
  "http2",
  "json",
  "query",
  "tokio",
] }
base64 = "0.21.5"
reqwest = { version = "0.11.22", default-features = false, features = [
  "rustls-tls",
  "tokio-rustls",
  "json",
] }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.13.1"
tokio-tun = "0.11.2"

[profile.release]
lto = "fat"
codegen-units = 1
