[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mycelium = { path = "../mycelium", features = ["vendored-openssl"] }
tokio = { version = "1.39.3", features = ["signal", "rt-multi-thread"] }
thiserror = "1.0.63"
tracing = { version = "0.1.40", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
once_cell = "1.19.0"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2.0"

[target.'cfg(target_os = "ios")'.dependencies]
tracing-oslog = "0.1.2"
