[package]
name = "mycelium-android"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mycelium-android"
path = "src/main.rs"

[dependencies]
mycelium = { path = "../mycelium", features = ["aidl"] }
rsbinder = { version = "0.6", features = ["android_14"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"
