[package]
name = "mycelium-api"
version = "0.7.3"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"

[features]
message = ["mycelium/message"]

[dependencies]
axum = { version = "0.8.8", default-features = false, features = [
  "http1",
  "http2",
  "json",
  "query",
  "tokio",
] }
base64 = "0.22.1"
jsonrpsee = { version = "0.26.0", features = [
  "server",
  "macros",
  "jsonrpsee-types",
] }
serde_json = "1.0.149"
tracing = "0.1.44"
tokio = { version = "1.49.0", default-features = false, features = [
  "net",
  "rt",
] }
mycelium = { path = "../mycelium" }
mycelium-metrics = { path = "../mycelium-metrics", features = ["prometheus"] }
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"

[dev-dependencies]
serde_json = "1.0.149"
