[package]
name = "mycelium-cli"
version = "0.7.0"
edition = "2021"
license-file = "../LICENSE"
readme = "./README.md"

[features]
message = ["mycelium/message", "mycelium-api/message"]

[dependencies]
mycelium = { path = "../mycelium" }
mycelium-api = { path = "../mycelium-api" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
prettytable-rs = "0.10.0"
tracing = "0.1.41"
tokio = { version = "1.48.0", default-features = false, features = [
  "net",
  "rt",
  "fs",
] }
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
byte-unit = "5.1.6"
urlencoding = "2.1.3"
