[package]
name = "mycelium-cli"
version = "0.7.1"
edition = "2021"
license-file = "../LICENSE"
readme = "./README.md"

[features]
message = ["mycelium/message", "mycelium-api/message"]

[dependencies]
mycelium = { path = "../mycelium" }
mycelium-api = { path = "../mycelium-api" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
base64 = "0.22.1"
prettytable-rs = "0.10.0"
tracing = "0.1.44"
tokio = { version = "1.49.0", default-features = false, features = [
  "net",
  "rt",
  "fs",
] }
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
byte-unit = "5.2.0"
urlencoding = "2.1.3"
