[package]
name = "mycelium-metrics"
version = "0.7.1"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"

[features]
prometheus = ["dep:axum", "dep:prometheus", "dep:tokio", "dep:tracing"]

[dependencies]
axum = { version = "0.8.8", default-features = false, optional = true, features = [
  "http1",
  "http2",
  "tokio",
] }
mycelium = { path = "../mycelium", default-features = false }
prometheus = { version = "0.14.0", default-features = false, optional = true, features = [
  "process",
] }
tokio = { version = "1.49.0", default-features = false, optional = true, features = [
  "net",
  "rt",
] }
tracing = { version = "0.1.44", optional = true }
