[package]
name = "mycelium-ui"
version = "0.1.0"
authors = ["Maxime Van Hees <vanheesm@threefold.tech>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5.1", features = ["desktop", "router"] }
mycelium = { path = "../mycelium" }
mycelium-api = { path = "../mycelium-api" }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.1"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"
