[package]
name = "mycelium-ui"
version = "0.7.0"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6.2", features = ["desktop", "router"] }
mycelium = { path = "../mycelium" }
mycelium-api = { path = "../mycelium-api" }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.6.2"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"
dioxus-sortable = "0.1.2"
manganis = "0.6.2"
dioxus-free-icons = { version = "0.9.0", features = [
  "font-awesome-solid",
  "font-awesome-brands",
  "font-awesome-regular",
] }
human_bytes = { version = "0.4.3", features = ["fast"] }
tokio = "1.44.1"
dioxus-charts = "0.3.1"
futures-util = "0.3.31"
urlencoding = "2.1.3"

[features]
bundle = []
