[package]
name = "mycelium"
version = "0.7.0"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"

[features]
message = []
private-network = ["dep:openssl", "dep:tokio-openssl"]
vendored-openssl = ["openssl/vendored"]
mactunfd = [
  "tun/appstore",
] #mactunfd is a flag to specify that macos should provide tun FD instead of tun name

[dependencies]
cdn-meta = { git = "https://github.com/threefoldtech/mycelium-cdn-registry", package = "cdn-meta" }

tokio = { version = "1.48.0", features = [
  "io-util",
  "fs",
  "macros",
  "net",
  "sync",
  "time",
  "rt-multi-thread", # FIXME: remove once tokio::task::block_in_place calls are resolved
] }
tokio-util = { version = "0.7.16", features = ["codec"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"
bytes = "1.10.1"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
aes-gcm = "0.10.3"
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-logfmt = { version = "0.3.5", features = ["ansi_logs"] }
faster-hex = "0.10.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
left-right = "0.11.6"
ipnet = "2.11.0"
ip_network_table-deps-treebitmap = "0.5.0"
blake3 = "1.8.2"
etherparse = "0.19.0"
quinn = { version = "0.11.9", default-features = false, features = [
  "runtime-tokio",
  "rustls",
] }
rustls = { version = "0.23.34", default-features = false, features = ["ring"] }
rcgen = "0.14.5"
netdev = "0.38.2"
openssl = { version = "0.10.74", optional = true }
tokio-openssl = { version = "0.6.5", optional = true }
arc-swap = "1.7.1"
dashmap = { version = "6.1.0", features = ["inline"] }
ahash = "0.8.11"
axum = "0.8.6"
axum-extra = "0.10.3"
reqwest = { version = "0.12.24", default-features = false, features = [
  "charset",
  "http2",
  "system-proxy",
  "rustls-tls",
] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
reed-solomon-erasure = "6.0.0"
hickory-server = "0.25.2"
async-trait = "0.1.89"
hickory-resolver = "0.25.2"
[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.18.1"
tokio-tun = "0.15.0"
nix = { version = "0.30.1", features = ["socket"] }

[target.'cfg(target_os = "macos")'.dependencies]
tun = { git = "https://github.com/LeeSmet/rust-tun", features = ["async"] }
libc = "0.2.177"
nix = { version = "0.29.0", features = ["net", "socket", "ioctl"] }

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.5.1"

[target.'cfg(target_os = "android")'.dependencies]
tun = { git = "https://github.com/LeeSmet/rust-tun", features = ["async"] }

[target.'cfg(target_os = "ios")'.dependencies]
tun = { git = "https://github.com/LeeSmet/rust-tun", features = ["async"] }
