[package]
name = "mycelium"
version = "0.7.2"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"

[features]
message = []
private-network = ["dep:openssl", "dep:tokio-openssl"]
vendored-openssl = ["openssl/vendored"]
mactunfd = [
  "tun/appstore",
] #mactunfd is a flag to specify that macos should provide tun FD instead of tun name

[dependencies]
cdn-meta = { git = "https://github.com/threefoldtech/mycelium-cdn-registry", package = "cdn-meta" }

tokio = { version = "1.49.0", features = [
  "io-util",
  "fs",
  "macros",
  "net",
  "sync",
  "time",
  "rt-multi-thread", # FIXME: remove once tokio::task::block_in_place calls are resolved
] }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"
bytes = "1.11.0"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
aes-gcm = "0.10.3"
tracing = { version = "0.1.44", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-logfmt = { version = "0.3.5", features = ["ansi_logs"] }
faster-hex = "0.10.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
left-right = "0.11.7"
ipnet = "2.11.0"
ip_network_table-deps-treebitmap = "0.5.0"
blake3 = "1.8.3"
etherparse = "0.19.0"
quinn = { version = "0.11.9", default-features = false, features = [
  "runtime-tokio",
  "rustls",
] }
rustls = { version = "0.23.36", default-features = false, features = ["ring"] }
rcgen = "0.14.7"
netdev = "0.40.0"
openssl = { version = "0.10.75", optional = true }
tokio-openssl = { version = "0.6.5", optional = true }
arc-swap = "1.8.0"
dashmap = { version = "6.1.0", features = ["inline"] }
ahash = "0.8.11"
axum = "0.8.8"
axum-extra = "0.12.5"
reqwest = { version = "0.12.24", default-features = false, features = [
  "charset",
  "http2",
  "system-proxy",
  "rustls-tls",
] }
redis = { version = "1.0.2", features = ["tokio-comp"] }
reed-solomon-erasure = "6.0.0"
hickory-server = "0.25.2"
async-trait = "0.1.89"
hickory-resolver = "0.25.2"
[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.20.0"
tokio-tun = "0.15.0"
nix = { version = "0.30.1", features = ["socket"] }

[target.'cfg(target_os = "macos")'.dependencies]
tun = { git = "https://github.com/LeeSmet/rust-tun", features = ["async"] }
libc = "0.2.180"
nix = { version = "0.29.0", features = ["net", "socket", "ioctl"] }

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.5.1"

[target.'cfg(target_os = "android")'.dependencies]
tun = { git = "https://github.com/LeeSmet/rust-tun", features = ["async"] }

[target.'cfg(target_os = "ios")'.dependencies]
tun = { git = "https://github.com/LeeSmet/rust-tun", features = ["async"] }
