[package]
name = "mycelium"
version = "0.7.6"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"

[features]
message = []
private-network = ["dep:openssl", "dep:tokio-openssl"]
vendored-openssl = ["openssl/vendored"]
mactunfd = [
  "tun/appstore",
] #mactunfd is a flag to specify that macos should provide tun FD instead of tun name
# Build a C ABI surface (cdylib + staticlib + generated header) on top of the
# core node. Used by external daemons that wrap libmycelium without depending
# on Rust as a build dependency.
ffi = []

[lib]
# Keep "lib" so in-tree Rust crates (myceliumd, myceliumd-common, mycelium-api,
# mycelium-cli) can depend on this crate as a regular Rust library; "cdylib"
# and "staticlib" only emit useful artefacts when --features ffi is enabled
# (entry points are gated on cfg(feature = "ffi")), but building them
# unconditionally costs nothing extra.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
cdn-meta = { git = "https://github.com/threefoldtech/mycelium-cdn-registry", package = "cdn-meta" }

tokio = { version = "1.52.1", features = [
  "io-util",
  "fs",
  "macros",
  "net",
  "sync",
  "time",
  "rt-multi-thread", # FIXME: remove once tokio::task::block_in_place calls are resolved
] }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.1"
bytes = "1.11.0"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
aes-gcm = "0.10.3"
tracing = { version = "0.1.44", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-logfmt = { version = "0.3.7", features = ["ansi_logs"] }
faster-hex = "0.10.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
left-right = "0.11.7"
ipnet = "2.12.0"
ip_network_table-deps-treebitmap = "0.5.0"
blake3 = "1.8.4"
etherparse = "0.20.1"
quinn = { version = "0.11.9", default-features = false, features = [
  "runtime-tokio",
  "rustls",
] }
rustls = { version = "0.23.38", default-features = false, features = ["ring"] }
rcgen = "0.14.7"
netdev = "0.42.0"
openssl = { version = "0.10.78", optional = true }
tokio-openssl = { version = "0.6.5", optional = true }
arc-swap = "1.9.1"
dashmap = { version = "6.1.0", features = ["inline"] }
ahash = "0.8.11"
axum = "0.8.9"
axum-extra = "0.12.6"
reqwest = { version = "0.12.24", default-features = false, features = [
  "charset",
  "http2",
  "system-proxy",
  "rustls-tls",
] }
redis = { version = "1.2.0", features = ["tokio-comp"] }
reed-solomon-erasure = "6.0.0"
hickory-server = "0.26.0"
async-trait = "0.1.89"
hickory-resolver = "0.26.0"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.21.0"
nix = { version = "0.31.2", features = ["socket"] }
tokio-vsock = { version = "0.7.2" }
mycelium-tun = { path = "../mycelium-tun" }

[target.'cfg(target_os = "macos")'.dependencies]
tun = { git = "https://github.com/LeeSmet/rust-tun", features = ["async"] }
libc = "0.2.185"
nix = { version = "0.31.1", features = ["net", "socket", "ioctl"] }

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.5.1"

[target.'cfg(target_os = "android")'.dependencies]
tun = { git = "https://github.com/LeeSmet/rust-tun", features = ["async"] }
libc = "0.2.180"

[target.'cfg(target_os = "ios")'.dependencies]
tun = { git = "https://github.com/LeeSmet/rust-tun", features = ["async"] }

[build-dependencies]
cbindgen = { version = "0.29", default-features = false }
