[package]
name = "myceliumd-common"
version = "0.7.3"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
tracing = { version = "0.1.44", features = ["release_max_level_debug"] }
tracing-logfmt = { version = "0.3.7", features = ["ansi_logs"] }
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "nu-ansi-term",
] }
mycelium = { path = "../mycelium", features = ["message"] }
mycelium-metrics = { path = "../mycelium-metrics", features = ["prometheus"] }
mycelium-cli = { path = "../mycelium-cli/", features = ["message"] }
mycelium-api = { path = "../mycelium-api", features = ["message"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
config = "0.15.19"
dirs = "6.0.0"
toml = "1.0.2"
