[package]
name = "myceliumd-private"
version = "0.7.3"
edition = "2021"
license-file = "../LICENSE"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
vendored-openssl = ["mycelium/vendored-openssl"]

[[bin]]
name = "mycelium-private"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = [
  "macros",
  "rt-multi-thread",
] }
mycelium = { path = "../mycelium", features = ["private-network", "message"] }
myceliumd-common = { path = "../myceliumd-common" }
