[package]
name = "myceliumd"
version = "0.7.0"
edition = "2021"
license-file = "../LICENSE"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mycelium"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-logfmt = { version = "0.3.5", features = ["ansi_logs"] }
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "nu-ansi-term",
] }
mycelium = { path = "../mycelium", features = ["message"] }
mycelium-metrics = { path = "../mycelium-metrics", features = ["prometheus"] }
mycelium-cli = { path = "../mycelium-cli/", features = ["message"] }
mycelium-api = { path = "../mycelium-api", features = ["message"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
base64 = "0.22.1"
prettytable-rs = "0.10.0"
urlencoding = "2.1.3"
byte-unit = "5.1.6"
config = "0.15.18"
dirs = "6.0.0"
toml = "0.9.8"
