[package]
name = "myceliumd"
version = "0.7.3"
edition = "2021"
license-file = "../LICENSE"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mycelium"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
tokio = { version = "1.49.0", features = [
  "macros",
  "rt-multi-thread",
] }
myceliumd-common = { path = "../myceliumd-common" }
